<resources>
    <string name="app_name">Calculator</string>
    <string name="divideOperator">/</string>
    <string name="seven">7</string>
    <string name="power">xʸ</string>
    <string name="sqrt">√</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="multiplyOperator">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addOperator">+</string>
    <string name="decimalPoint">.</string>
    <string name="zero">0</string>
    <string name="clear">Clear</string>
    <string name="equal">=</string>
    <string name="squareRoot">√</string>
</resources>