<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonsBoard"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10sp"
        android:text=""
        android:textSize="60sp"
        android:textColor="@color/black"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsBoard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".7">



        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/secondRow"
            >

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="15sp"
                android:layout_marginRight="10sp"
                android:onClick="clear"
                />

            <Button
                android:id="@+id/powerButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/power"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onOperatorClick"
                />

            <Button
                android:id="@+id/sqrtButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/squareRoot"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onOperatorClick"
                />


            <Button
                android:id="@+id/divideButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divideOperator"
                android:textSize="20sp"
                android:onClick="onOperatorClick"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondRow"            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstRow"
            app:layout_constraintBottom_toTopOf="@id/ThirdRow"
            >

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="7"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/eightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/multiplyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiplyOperator"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="onOperatorClick"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ThirdRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondRow"
            app:layout_constraintBottom_toTopOf="@id/forthRow"
            >

            <Button
                android:id="@+id/fourButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/subtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-"
                android:textSize="20sp"
                android:onClick="onOperatorClick"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/forthRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ThirdRow"
            app:layout_constraintBottom_toTopOf="@id/fifthRow"
            >


            <Button
                android:id="@+id/oneButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/two"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/addOperator"
                android:textSize="20sp"
                android:onClick="onOperatorClick"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forthRow"
            app:layout_constraintBottom_toBottomOf="parent">


            <Button
                android:id="@+id/decimalButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/decimalPoint"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginRight="10sp"
                android:onClick="onDigitClick"
                />


            <Button
                android:id="@+id/equalButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/equal"
                android:textSize="20sp"
                android:backgroundTint="@color/pink"
                android:onClick="onEqualClick"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>